# Game-Engine-2D

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  TODO.org  conanfile.txt  engine_interface.txt  flake.nix  shell.nix
assets/: laura-sheet-credits.txt
maps/: map1.tmx  modern-city.tsx
src/: animation_manager.cpp  animation_manager.hpp  character.cpp  character.hpp  engine.cpp  engine.hpp  entity.hpp  event.hpp  input_manager.cpp  input_manager.hpp  main.cpp  physics_engine.cpp  physics_engine.hpp  sprite.cpp  sprite.hpp  spritesheets_manager.cpp  spritesheets_manager.hpp  spritesheets_manager_tests.cpp  texture.hpp  utils.hpp  world.cpp  world.hpp
